# lique

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  pyproject.toml  requirements.txt  test.py  test.qasm.map
.github/workflows/: ci.yaml  release.yaml
dataset/: convert_to_qasm.py  generate_cases.sh
dataset/python/: double_measurement.py  python_quantum_number_generator_1_6_multi_qasm_76fe84.py  q02_417981.py  quantum_pixel_generator_multi_qasm_fractional_variable_d8275b.py  quantum_teleportation_1881c2.py  quantumdice_bc7351.py  quntum_204_dec_2005_202020_206_2042_20am_16e278.py  sandbox_e52934.py  task_2_4f46b2.py  teleportation_practice_4ae2ea.py  test_qasm_simulator_edd048.py  test_structure_aaba85.py
dataset/qasm/: _12_quantum_key_distribution_checkpoint_4165fd.qasm  ch_3_28325b.qasm  double_measurement.qasm  hardware_3936ea.qasm  measurement_postulate_single_qubit_f_fb7a34.qasm  python_quantum_number_generator_1_6_multi_qasm_76fe84.qasm  q02_417981.qasm  quantumteleportation_2823d6.qasm  sandbox_e52934.qasm  teleportation_8f1eaf.qasm  test_circuit_to_dag_5333cb.qasm  test_qasm_simulator_edd048.qasm  test_structure_aaba85.qasm  two_qubit_4cff15.qasm
evaluation/: dataset.json  extract_lintq_results.py  lintq_metrics.json  lintq_perf.json  lintq_results.json  lique_metrics.json  lique_results.json  run_lintq.py  run_lique_perf.py  separate_dataset_by_rule.py  summarize_dataset.py  unify_lintq_results.py
evaluation/dataset/: common.py  convert_to_qasm.py  dataset.json  generate_dataset.py
evaluation/dataset/generate/: double_measurement.gen.py
evaluation/dataset/python/: UnmeasureableQubits.py  _12_quantum_key_distribution_checkpoint_4165fd.py  a00_qiskit_introduction_1ba1af.py  a00_qiskit_introduction_checkpoint_78fe1f.py  aatoms_of_computation_ed6fac.py  (+60 more)
evaluation/lintq/: conditional_without_measurement.qls  constant_classic_bit.qls  double_measurement.qls  lintq.qls  lintq_results.json  operation_after_measurement.qls  oversized_circuit.qls  unmeasurable_qubits.qls
evaluation/results/: dataset_summary.csv  lintq_metrics.json  lintq_perf.csv  lintq_results.json  lique_metrics.json  lique_perf.csv  lique_results.json
lique/: Cargo.toml
lique-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
lique-vscode/src/: extension.ts
lique/src/: main.rs
lique_core/: Cargo.toml
lique_core/src/: byte_offset.rs  error.rs  lib.rs  lints.rs  rule.rs  source_map.rs
lique_evaluation/: Cargo.toml
lique_evaluation/src/: calculate_metrics.rs  main.rs  run_lintq.rs  run_lique.rs  types.rs
lique_linter/: Cargo.toml
lique_linter/src/: main.rs
lique_ls/: Cargo.toml
lique_ls/src/: lib.rs  locator.rs  main.rs  protocol.rs  server.rs
src/: main.rs
src/lints/: measurement_twice.rs
tests/: test.py  test.qasm  test.qasm.map.json
tests/dummyq/: __init__.py
(+123 files in other folders)
