[package]
name = "lique"
version = "0.1.0"
edition = "2021"
description = "lique is a linter for quantum programs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
ariadne = "0.5.0"
clap = { version = "4.5.21", features = ["derive"] }
lique_core = { path = "../lique_core" }
oq3_semantics = { workspace = true }
oq3_source_file = { workspace = true }
serde_json = "1.0.133"
