[package]
name = "lique_evaluation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
lique_core = { path = "../lique_core" }
oq3_semantics = { workspace = true }
oq3_source_file = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
