[package]
name = "lique_evaluation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
lique_core = { path = "../lique_core" }
oq3_semantics = { workspace = true }
oq3_source_file = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.133"
