[package]
name = "lique_ls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
env_logger = "0.11.5"
lique_core = { path = "../lique_core" }
log = "0.4.22"
lsp-types = "0.97.0"
rustpython-parser = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
